--- a/portfolio/src/components/portfolio/portfolio.scss
+++ b/portfolio/src/components/portfolio/portfolio.scss
@@ -18,7 +18,7 @@
         @include mobile{
             font-size: 20px;
             margin-top: 5px;
-            font-weight: 400;
+            // font-weight: 400;
         }
     }
 
